# balancingkit_sim

./: launch
balancingkit_control/: CMakeLists.txt  package.xml
balancingkit_control/config/: controller.yaml
balancingkit_control/launch/: balancingkit_control.launch
balancingkit_control/scripts/: a_star.py  balance.py  controller_vel_publisher.py  lsm6.py
balancingkit_description/: CMakeLists.txt  model.config  package.xml
balancingkit_description/launch/: display.launch  display_xacro.launch
balancingkit_description/launch/config/: urdf.rviz
balancingkit_description/meshes/fcinfo/: .~lock.ModelData.ods#  FCInfo_balboa_balancing_robot_kit_wheel_left.txt  FCInfo_balboa_balancing_robot_kit_wheel_right.txt  ModelData.ods  balboa_balancing_robot_kit_body_bal01a01.txt  balboa_balancing_robot_kit_body_battery-cover.txt  balboa_balancing_robot_kit_body_chassis.txt
balancingkit_description/robots/: balancingkit.urdf.xacro
balancingkit_description/src/: balancingkit_model_tf_publisher.cpp
balancingkit_description/urdf/: balancingkit.urdf  balancingkit.urdf.xacro  balancingkit.urdf_bak  raspimouse.urdf.xacro
balancingkit_description/urdf/body/: body.gazebo.xacro  body.urdf.xacro
balancingkit_description/urdf/sensors/: imu.gazebo.xacro  imu.urdf.xacro
balancingkit_gazebo/: CMakeLists.txt  package.xml
balancingkit_gazebo/launch/: balancingkit_with_emptyworld.launch  balancingkit_with_emptyworld_rviz.launch  raspimouse_with_emptyworld.launch  test.launch
balancingkit_gazebo/worlds/: test.world
balancingkit_sim/: CMakeLists.txt  package.xml
(+13 files in other folders)
